# demo-locust

./: .gitignore  README.md
api/: main.py  models.py  pyproject.toml
locust-testing/: Dockerfile  locustfile.py  pyproject.toml
